src/objects/Cloud_Hunter_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>General Settings for the Cloud Hunter Application.</description>
    <fields>
        <fullName>Disable_Social_Identity_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to define if posting to the integration social feed is allowed.</description>
        <inlineHelpText>This is an ORG level setting, the integration class has a similar setting if you want to use social sign-on but not utilize social posting to the user&apos;s profile.</inlineHelpText>
        <label>Disable Social Identity Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Class_Name__c</fullName>
        <description>The name of the Apex class that implements the IntegrationIface interface.  This is an abstraction that allows the application to be installed into an org or optionally in a separate org while still supporting chatter and user integration.</description>
        <label>Integration Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Suffix__c</fullName>
        <description>Due to the username being auto generated from the auth provider information, define a suffix to create a unique username correctly. e.g. name = John Doe, suffix = @cloudhunter.tmp results in a username of john.doe@cloudhunter.tmp</description>
        <label>Username Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Cloud Hunter Settings</label>
</CustomObject>